Spacing fix

--- a/client/style/icons.scss
+++ b/client/style/icons.scss
@@ -1,16 +1,6 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import './constants';
 
-i.fa-plus {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  padding: 2rem;
-  font-size: 3rem;
-  color: $alt-color;
-  cursor: pointer;
-}
-
 .material-icons.md-18 { font-size: 18px; }
 
 .material-icons.md-24 { font-size: 24px; }
