--- a/client/style/style.scss
+++ b/client/style/style.scss
@@ -160,7 +160,6 @@ body {
   font-weight: 300;
   border: 1px solid $report-color;
   width: 100%;
-  height: 30vh;
 }
 
 .report-dates {
@@ -177,7 +176,7 @@ body {
   margin: 1rem 0;
 
   & span {
-  padding: 0.5em;
+    padding: 0.5em;
   }
 
   :first-child {
